--- a/css/reset.css
+++ b/css/reset.css
@@ -1,21 +1,1 @@
-/* Author: Fabrício Rocha */
-
-/*=================== RESET ==================*/
-*{
-	margin: 0; 
-	padding: 0; 
-	font-size: 100%; 
-	border: none; 
-	outline: none; 
-	font-weight: 300; 
-	box-sizing: border-box;
-	font-family: 'Raleway', sans-serif;}
-
-a {text-decoration: none;}
-
-ul {list-style: none;}
-
-img {max-width: 100%;}
-
-html, body{ height: 100%; width: 100%;}
-body{ background-color: #f5f5f5; }
+*{margin:0;padding:0;font-size:100%;border:none;outline:0;font-weight:300;box-sizing:border-box;font-family:Raleway,sans-serif}a{text-decoration:none}ul{list-style:none}img{max-width:100%}body,html{height:100%;width:100%}body{background-color:#f5f5f5}
